8234270: [REDO] JDK-8204128 NMT might report incorrect numbers for Compiler area

Reviewed-by: stuefe, minqi